# PyCasia

./: .gitignore  .travis.yml  CASIA.py  README.md  pyproject.toml  readme.txt  requirements.txt  setup.py  statusbar.py  test_CASIA.py
.github/workflows/: test.yml
pycasia/: CASIA.py  statusbar.py
tests/: test_CASIA.py
