[tool.poetry]
name = "pycasia"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero <lucas@lucaskjaero.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pillow = "^10.0.1"
tqdm = "^4.53.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
